test/parallel/forall/checks/with-this.good
with-this.chpl:5: error: cannot currently apply a forall or task intent to 'this'
